@@ -41,6 +41,7 @@ The following bugs were resolved with this release:
   [33185] Fix double-free after allocation failure in regcomp
   [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
   [33245] nptl: nptl: error in internal cancellation syscall handling
+  [33361] nss: Group merge does not react to ERANGE during merge
 
 Version 2.41
 
